# fastapi-users-intro

./: README.md  docker-compose.yml  middlewares.py  pyproject.toml
fastapi-application/: .env.template  create_fastapi_app.py  main.py
fastapi-application/actions/: create_superuser.py
fastapi-application/api/api_v1/: __init__.py  auth.py  fastapi_users.py  messages.py  service.py  users.py
fastapi-application/api/dependencies/: fastapi_users.py  user_manager.py
fastapi-application/api/dependencies/authentication/: backend.py
fastapi-application/core/: config.py
fastapi-application/core/authentication/: transport.py  user_manager.py
fastapi-application/core/models/: access_token.py  user.py
fastapi-application/core/schemas/: user.py
fastapi-application/mailing/: send_verification_email.py
fastapi-application/templates/mailing/email-verify/: verification-request.html
